HUD update( start level, pause, optimization )

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
+GameDefaultMap=/Game/VehicleAdvBP/Maps/MenuLevel.MenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode_C
 GlobalDefaultServerGameMode=None
