--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameName=RustyNorth
 bSubstepping=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
+EditorStartupMap=/Game/VehicleAdvBP/Maps/MenuLevel.MenuLevel
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
@@ -30,4 +30,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VehicleAdvBP",NewGameName="/Script/RustyNorth")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VehicleAdvBP",NewGameName="/Script/RustyNorth")
+
+[/Script/WmfMediaFactory.WmfMediaSettings]
+LowLatency=True
+AllowNonStandardCodecs=True
 
